--- a/src/GitVersionCore/GitVersionCore.csproj
+++ b/src/GitVersionCore/GitVersionCore.csproj
@@ -1,215 +1,41 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\LibGit2Sharp.NativeBinaries.1.0.137\build\LibGit2Sharp.NativeBinaries.props" Condition="Exists('..\packages\LibGit2Sharp.NativeBinaries.1.0.137\build\LibGit2Sharp.NativeBinaries.props')" />
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F9741A0D-B9D7-4557-9A1C-A7252C1071F5}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GitVersion</RootNamespace>
+    <TargetFramework>netstandard2</TargetFramework>
     <AssemblyName>GitVersionCore</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <LangVersion>5</LangVersion>
-    <FileAlignment>512</FileAlignment>
-    <BuildDir>$(SolutionDir)..\build\</BuildDir>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <PackageId>GitVersionCore</PackageId>
+    <PackageVersion>2.0.0</PackageVersion>
+    <DefineConstants>NETSTANDARD</DefineConstants>
+    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
+    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\GitVersionCore.xml</DocumentationFile>
-    <NoWarn>1591</NoWarn>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\GitVersionCore.xml</DocumentationFile>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="GitTools.Core, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\GitTools.Core.1.1.0-beta0001\lib\net4\GitTools.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="JetBrains.Annotations, Version=8.1.11.55, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
-      <HintPath>..\packages\JetBrainsAnnotations.Fody.1.0.4.0\Lib\JetBrains.Annotations.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="LibGit2Sharp, Version=0.23.0.0, Culture=neutral, PublicKeyToken=7cbde695407f0333, processorArchitecture=MSIL">
-      <HintPath>..\packages\LibGit2Sharp.0.23.0-pre20150419160303\lib\net40\LibGit2Sharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Visualize, Version=0.4.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Visualize.Fody.0.4.5.0\lib\portable-net4+sl4+wp7+win8+MonoAndroid16+MonoTouch40\Visualize.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="YamlDotNet, Version=3.8.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\YamlDotNet.3.8.0\lib\net35\YamlDotNet.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+    <Compile Remove="VersionAssemblyInfoResources\VersionAssemblyInfo.cs" />
+    <None Include="App.config" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="AssemblyVersioningScheme.cs" />
-    <Compile Include="AssemblyVersionsGenerator.cs" />
-    <Compile Include="Authentication.cs" />
-    <Compile Include="BranchConfigurationCalculator.cs" />
-    <Compile Include="BuildServers\AppVeyor.cs" />
-    <Compile Include="BuildServers\BuildServerBase.cs" />
-    <Compile Include="BuildServers\BuildServerList.cs" />
-    <Compile Include="BuildServers\ContinuaCi.cs" />
-    <Compile Include="BuildServers\GitLabCi.cs" />
-    <Compile Include="BuildServers\IBuildServer.cs" />
-    <Compile Include="BuildServers\Jenkins.cs" />
-    <Compile Include="BuildServers\MyGet.cs" />
-    <Compile Include="BuildServers\TeamCity.cs" />
-    <Compile Include="BuildServers\VsoAgent.cs" />
-    <Compile Include="Configuration\BranchConfig.cs" />
-    <Compile Include="Configuration\Config.cs" />
-    <Compile Include="Configuration\ConsoleAdapter.cs" />
-    <Compile Include="Configuration\IConsole.cs" />
-    <Compile Include="Configuration\IgnoreConfig.cs" />
-    <Compile Include="Configuration\Init\BuildServer\AppVeyorSetup.cs" />
-    <Compile Include="Configuration\Init\BuildServer\SetupBuildScripts.cs" />
-    <Compile Include="Configuration\Init\SetConfig\AssemblyVersioningSchemeSetting.cs" />
-    <Compile Include="Configuration\Init\SetNextVersion.cs" />
-    <Compile Include="Configuration\Init\Wizard\ConfigInitWizard.cs" />
-    <Compile Include="Configuration\ConfigSerialiser.cs" />
-    <Compile Include="Configuration\ConfigurationProvider.cs" />
-    <Compile Include="Configuration\IncrementStrategy.cs" />
-    <Compile Include="Configuration\LegacyConfig.cs" />
-    <Compile Include="Configuration\LegacyConfigNotifier.cs" />
-    <Compile Include="Configuration\OldConfigurationException.cs" />
-    <Compile Include="Configuration\Init\Wizard\ConfigInitWizardStep.cs" />
-    <Compile Include="Configuration\Init\SetConfig\ConfigureBranch.cs" />
-    <Compile Include="Configuration\Init\SetConfig\ConfigureBranches.cs" />
-    <Compile Include="Configuration\Init\EditConfigStep.cs" />
-    <Compile Include="Configuration\Init\Wizard\FinishedSetupStep.cs" />
-    <Compile Include="Configuration\Init\Wizard\GitFlowSetupStep.cs" />
-    <Compile Include="Configuration\Init\Wizard\GitHubFlowStep.cs" />
-    <Compile Include="Configuration\Init\Wizard\PickBranchingStrategy2Step.cs" />
-    <Compile Include="Configuration\Init\Wizard\PickBranchingStrategy3Step.cs" />
-    <Compile Include="Configuration\Init\Wizard\PickBranchingStrategy1Step.cs" />
-    <Compile Include="Configuration\Init\SetConfig\SetBranchIncrementMode.cs" />
-    <Compile Include="Configuration\Init\SetConfig\SetBranchTag.cs" />
-    <Compile Include="Configuration\Init\SetConfig\GlobalModeSetting.cs" />
-    <Compile Include="Configuration\Init\Wizard\PickBranchingStrategyStep.cs" />
-    <Compile Include="Configuration\Init\StepResult.cs" />
-    <Compile Include="EffectiveConfiguration.cs" />
-    <Compile Include="ExecuteCore.cs" />
-    <Compile Include="Extensions\ReadEmbeddedResourceExtensions.cs" />
-    <Compile Include="GitPreparer.cs" />
-    <Compile Include="GitVersionCache.cs" />
-    <Compile Include="Helpers\FileSystem.cs" />
-    <Compile Include="Helpers\IFileSystem.cs" />
-    <Compile Include="Helpers\ServiceMessageEscapeHelper.cs" />
-    <Compile Include="IncrementStrategyFinder.cs" />
-    <Compile Include="OutputVariables\VersionVariables.cs" />
-    <Compile Include="SemanticVersionExtensions.cs" />
-    <Compile Include="SemanticVersionFormatValues.cs" />
-    <Compile Include="VersionFilters\MinDateVersionFilter.cs" />
-    <Compile Include="VersionFilters\IVersionFilter.cs" />
-    <Compile Include="VersionFilters\ShaVersionFilter.cs" />
-    <Compile Include="StringFormatWith.cs" />
-    <Compile Include="VersionAssemblyInfoResources\AssemblyVersionInfoTemplates.cs" />
-    <EmbeddedResource Include="VersionAssemblyInfoResources\VersionAssemblyInfo.cs" />
-    <Compile Include="VersionCalculation\BaseVersionCalculator.cs" />
-    <Compile Include="VersionCalculation\BaseVersionCalculators\BaseVersion.cs" />
-    <Compile Include="VersionCalculation\BaseVersionCalculators\ConfigNextVersionBaseVersionStrategy.cs" />
-    <Compile Include="VersionCalculation\BaseVersionCalculators\TrackMergeTargetBaseVersionStrategy.cs" />
-    <Compile Include="VersionCalculation\BaseVersionCalculators\TaggedCommitVersionStrategy.cs" />
-    <Compile Include="VersionCalculation\BaseVersionCalculators\MergeMessageBaseVersionStrategy.cs" />
-    <Compile Include="VersionCalculation\BaseVersionCalculators\VersionInBranchBaseVersionStrategy.cs" />
-    <Compile Include="VersionCalculation\BaseVersionStrategy.cs" />
-    <Compile Include="VersionCalculation\FallbackBaseVersionStrategy.cs" />
-    <Compile Include="VersionCalculation\IBaseVersionCalculator.cs" />
-    <Compile Include="VersionCalculation\IMetaDataCalculator.cs" />
-    <Compile Include="VersionCalculation\MetaDataCalculator.cs" />
-    <Compile Include="VersionCalculation\NextVersionCalculator.cs" />
-    <Compile Include="VersioningModes\ContinuousDeliveryMode.cs" />
-    <Compile Include="VersioningModes\ContinuousDeploymentMode.cs" />
-    <Compile Include="VersioningModes\VersioningMode.cs" />
-    <Compile Include="VersioningModes\VersioningModeBase.cs" />
-    <Compile Include="VersioningModes\VersioningModeExtension.cs" />
-    <Compile Include="Extensions\ExtensionMethods.cs" />
-    <Compile Include="GitVersionContext.cs" />
-    <Compile Include="GitVersionFinder.cs" />
-    <Compile Include="Helpers\DeleteHelper.cs" />
-    <Compile Include="LambdaEqualityHelper.cs" />
-    <Compile Include="LibGitExtensions.cs" />
-    <Compile Include="Logger.cs" />
-    <Compile Include="OutputFormatters\BuildOutputFormatter.cs" />
-    <Compile Include="OutputFormatters\JsonOutputFormatter.cs" />
-    <Compile Include="OutputType.cs" />
-    <Compile Include="OutputVariables\VariableProvider.cs" />
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="SearchPath.cs" />
-    <Compile Include="SemanticVersion.cs" />
-    <Compile Include="SemanticVersionBuildMetaData.cs" />
-    <Compile Include="SemanticVersionPreReleaseTag.cs" />
+    <PackageReference Include="GitTools.Core" Version="1.3.0" />
+    <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
+    <PackageReference Include="Microsoft.Win32.Registry" Version="4.3.0" />
+    <PackageReference Include="System.Console" Version="4.3.0" />
+    <PackageReference Include="System.Globalization" Version="4.3.0" />
+    <PackageReference Include="System.Globalization.Extensions" Version="4.0.1" />
+    <PackageReference Include="System.IO" Version="4.3.0" />
+    <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
+    <PackageReference Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
+    <PackageReference Include="System.Linq" Version="4.3.0" />
+    <PackageReference Include="System.Net.Primitives" Version="4.3.0" />
+    <PackageReference Include="System.Net.Requests" Version="4.0.11" />
+    <PackageReference Include="System.Reflection" Version="4.3.0" />
+    <PackageReference Include="System.Runtime.Extensions" Version="4.3.0" />
+    <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.0" />
+    <PackageReference Include="System.Security.Cryptography.Primitives" Version="4.3.0" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.0" />
+    <PackageReference Include="YamlDotNet" Version="4.2.1" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="FodyWeavers.xml">
-      <SubType>Designer</SubType>
-    </Content>
-    <EmbeddedResource Include="VersionAssemblyInfoResources\VersionAssemblyInfo.vb" />
-    <EmbeddedResource Include="VersionAssemblyInfoResources\VersionAssemblyInfo.fs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="NugetAssets\GitVersion.nuspec">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\PepitaPackage.1.21.4\build\PepitaPackage.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\PepitaPackage.1.21.4\build\PepitaPackage.targets'))" />
-    <Error Condition="!Exists('..\packages\Fody.1.29.4\build\portable-net+sl+win+wpa+wp\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.1.29.4\build\portable-net+sl+win+wpa+wp\Fody.targets'))" />
-    <Error Condition="!Exists('..\packages\LibGit2Sharp.NativeBinaries.1.0.137\build\LibGit2Sharp.NativeBinaries.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\LibGit2Sharp.NativeBinaries.1.0.137\build\LibGit2Sharp.NativeBinaries.props'))" />
-  </Target>
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
-  <Target Name="Clean">
-    <ItemGroup>
-      <RefFilesToDelete Include="$(BuildDir)NuGetRefBuild\**\*.*" />
-    </ItemGroup>
-    <Delete Files="@(RefFilesToDelete)" />
-  </Target>
-  <Target Name="AfterBuild" DependsOnTargets="Clean">
-    <!-- NugetRefBuild -->
-    <MakeDir Directories="$(SolutionDir)NuGetRefBuild\lib\Net45" />
-    <Copy SourceFiles="$(OutputPath)GitVersionCore.dll" DestinationFolder="$(BuildDir)NuGetRefBuild\lib\Net45" />
-    <Copy SourceFiles="$(OutputPath)GitVersionCore.pdb" DestinationFolder="$(BuildDir)NuGetRefBuild\lib\Net45" Condition="Exists('$(OutputPath)GitVersionCore.pdb')" />
-    <Copy SourceFiles="$(OutputPath)GitVersionCore.dll.mdb" DestinationFolder="$(BuildDir)NuGetRefBuild\lib\Net45" Condition="Exists('$(OutputPath)GitVersionCore.dll.mdb')" />
-    <Copy SourceFiles="$(OutputPath)GitVersionCore.xml" DestinationFolder="$(BuildDir)NuGetRefBuild\lib\Net45" />
-    <Copy SourceFiles="$(ProjectDir)NugetAssets\GitVersion.nuspec" DestinationFolder="$(BuildDir)NuGetRefBuild" />
-    <PepitaPackage.CreatePackageTask NuGetBuildDirectory="$(BuildDir)NuGetRefBuild" MetadataAssembly="$(OutputPath)GitVersionCore.dll" Version="$(GitVersion_NuGetVersion)" />
-  </Target>
-  <Import Project="..\packages\PepitaPackage.1.21.4\build\PepitaPackage.targets" Condition="Exists('..\packages\PepitaPackage.1.21.4\build\PepitaPackage.targets')" />
-  <Import Project="..\packages\Fody.1.29.4\build\portable-net+sl+win+wpa+wp\Fody.targets" Condition="Exists('..\packages\Fody.1.29.4\build\portable-net+sl+win+wpa+wp\Fody.targets')" />
+
 </Project>
